2002-12-08 garilck
	* New release code for GPL.  Updated DISCLAIMER, source file headers.
	* Ran through "indent --no-tabs -kr *.[ch]" and installed standard
          vi footers (except hostlist.[ch])
	* Tagged pdsh-1-7-7noelan

2002-10-21 garlick
	* Bulding version for ILX cluster with genders but no elan
	* Tagged pdsh-1-7-6noelan

2002-10-09 garlick
	* Building non-chaos version for distro.
	* Tagged pdsh-1-7-6

2002-10-09 garlick
	* Eliminate third fork in qswutil.c per Addy at Quadrics.
	* Tagged pdsh-1-7-6chaos

2002-10-02 grondo
	* hostlist.c: properly handle deletion of unsuffixed hosts (pdsh/120)
	* opt.c: Abort when -x option given but hostlist_delete() returns 0
	* Makefile.am, configure.ac: only need READLINE_LIBS for pdsh binary
	* Tagged pdsh-1-7-5chaos (sent this version to addy@quadrics.com)

2002-09-27 garlick
	* Added support for readline in interactive mode if found.
	* Taggged pdsh-1-7-4chaos

2002-09-27 grondo
	* Make-rpm.mk: Updated rpm target for compatibility with automake
	* pdsh.1.in, pdcp.1.in: Improve documentation of hostname 
	  range handling (gnat pdsh/97)

2002-09-26 grondo
	* configure.ac: workaround autoconf-2.53 bug affecting improper
	  expansion of path in AC_PATH_PROG macro (fix for pdsh/116)

2002-09-26 garlick
	* Mark fixed pdsh/118 (bad usage of hostlist api)
	* Removed possibilty of string overflow in a couple places.
	* Taggged pdsh-1-7-3chaos (sent to LNXI for MCR)

2002-09-12 garlick
	* Reordered ChangeLog in reverse chronological order.
	* Mark fixed Elan context number wrap-around bug.

2002-09-12 garlick
	* Repair a file descriptor leak in rcp_thread  (gnat pdsh/113)
	* More error reporting in qswutil.c, qcmd.c, qshd.c
	* Fixed bug in sending of long bitmaps.
	* Taggged pdsh-1-7-2chaos (sent to LNXI for MCR)

2002-09-03 grondo
	* Automake-ified
	* Have `dshbak -c' generate bracketed ranges compatible with pdsh -w
	* Updated testsuite for compatibility with bracketed host ranges

2002-08-12 garlick