@@ -5,5 +5,5 @@
 ##
   Meta:		1
   Name:		pdsh
-  Version:	1.7
+  Version:	1.8
   Release:	7noelan
